{{$NEXT}}

0.000039  2016-04-04 21:32:08-07:00 America/Los_Angeles

    - Formatters can pick buffered subtest behavior
    - Add sets_plan() method to event base class
    - Add diagnostics() method to event base class

0.000038  2016-04-03 15:41:39-07:00 America/Los_Angeles

    - Add summary() method to event base class

0.000037  2016-04-01 08:41:22-07:00 America/Los_Angeles

    - Change Formatter to load Test2::API on demand
    - Add test to insure Test2::API is not loaded by some modules

0.000036  2016-03-28 11:44:53-07:00 America/Los_Angeles

    - Do not warn if unimportant INIT block cannot be run
    - Change how TAP duplicates IO handles, use 3 arg form of open

0.000035  2016-03-25 09:41:46-07:00 America/Los_Angeles (TRIAL RELEASE)

    - More fixes for #16
    - Add some END block manipulation for #16
    - Turn off depth checking on older perls (for #16)

0.000034  2016-03-24 10:32:57-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix depth bug introduced in the last trial

0.000033  2016-03-24 08:39:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Better fox for #16 (workaround for caller() in END bug)
    - Put test for #16 in regular testing dir as new fix is more stable

0.000032  2016-03-23 23:54:40-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix #16 (workaround for caller() in END bug)

0.000031  2016-03-20 13:45:43-07:00 America/Los_Angeles

    - Regenerate README files
    - Apply spelling fixes (aquire->acquire) #11
    - Improve error message for missing hubs #12

0.000030  2016-03-15 08:04:21-07:00 America/Los_Angeles

    - Re-Add transition document

0.000029  2016-03-09 10:04:19-08:00 America/Los_Angeles

    - Add pid to Files driver temp dir name

0.000028  2016-03-09 09:03:26-08:00 America/Los_Angeles

    - Environment var to control IPC::Driver::Files temp dir templates

0.000027  2016-03-07 12:16:34-08:00 America/Los_Angeles

    - Ability to disable skip_all subtest abort construct
